--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2aecbbe0",
+   "id": "b826a86e",
    "metadata": {},
    "source": [
     "Postprocessing with atooms\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1949a639",
+   "id": "1af38cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90b8f50",
+   "id": "b775a205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c15286b1",
+   "id": "db9a8ee3",
    "metadata": {},
    "source": [
     "We consider a sample trajectory, which can be downloaded from the\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4439c12",
+   "id": "e72fe73c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60512c1f",
+   "id": "ea500b6f",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c8606a6",
+   "id": "5f09261f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eac93396",
+   "id": "d6febaa2",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a125ab36",
+   "id": "b9d566a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5add84",
+   "id": "88926c05",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f1c6ef",
+   "id": "510d7473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "677992cc",
+   "id": "32f72dae",
    "metadata": {},
    "source": [
     "To clarify: a slice like `th[10: 12]` is a list of frames, not a\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60321517",
+   "id": "571609b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "742f2131",
+   "id": "501c5e08",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee1629e",
+   "id": "3fd61bed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dcfddd2",
+   "id": "e87323f2",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b54cc5e",
+   "id": "6cecaf53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883e047c",
+   "id": "1dd44e30",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1a8b2e",
+   "id": "019f06ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14aa9a4b",
+   "id": "18881dda",
    "metadata": {},
    "source": [
     "As we can see, the correlation function displays two narrow peaks around\n",
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "006546e6",
+   "id": "75dc4d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd85383",
+   "id": "33ccd8b3",
    "metadata": {},
    "source": [
     "Note how we modified the bin width `dr` for the $B$-$B$ correlations to\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3cdf740",
+   "id": "cd24253f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4079333f",
+   "id": "ceb84113",
    "metadata": {},
    "source": [
     "We plot all correlation functions\n"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "539a80e5",
+   "id": "a09425bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a69239",
+   "id": "33efb253",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f513e9f1",
+   "id": "b7ae42f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf43a8a",
+   "id": "1ca0b112",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9524192",
+   "id": "b5a27c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b113ac42",
+   "id": "86f103c1",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0625459",
+   "id": "7ecb15f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce23085",
+   "id": "9758814f",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79acdfe5",
+   "id": "e2bf38b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d6db667",
+   "id": "33503370",
    "metadata": {},
    "source": [
     "Note that now `grid` is a tuple of lists: the first one is the list of\n",
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8a2c59",
+   "id": "52874e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cddc9c4",
+   "id": "ff0df196",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd66676",
+   "id": "206325ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b803b47b",
+   "id": "18a7473e",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -565,58 +565,123 @@
     "which are picked at runtime depending on your platform. The fastest\n",
     "implementation will be automatically picked up, if possible.\n",
     "\n",
-    "Writing your own correlation function\n",
-    "-------------------------------------\n",
+    "Writing your own correlation functions\n",
+    "--------------------------------------\n",
     "\n",
     "We can extend the correlation class to compute additional correlation\n",
-    "functions. The particle coordinates are loaded into the `_pos` instance\n",
-    "variable as a list of numpy arrays. Each numpy array is a\n",
-    "`(ndim, npart)` representation of the full particles\\' coordinates in a\n",
-    "given frame of the trajectory. This is a gist of a new correlation\n",
-    "class.\n"
+    "functions. By default, we get access to particles\\' positions and\n",
+    "velocities stored in the following `Correlation` attributes\n",
+    "\n",
+    "-   `_pos`: positions as a list of `(ndim, npart)` numpy arrays, one per\n",
+    "    frame\n",
+    "-   `_pos_unf`: same as above but positions are PBC-unfolded (useful for\n",
+    "    dynamic correlations)\n",
+    "-   `_vel`: velocities as a list of `(ndim, npart)` numpy arrays, one\n",
+    "    per frame\n",
+    "\n",
+    "### Static correlations\n",
+    "\n",
+    "This is a gist of a new correlation class that computes a static\n",
+    "correlation over some grid and averages it over the frames\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35d97f67",
+   "id": "7e0252bc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import atooms.postprocessing as pp\n",
     "from collections import defaultdict\n",
     "import numpy\n",
     "\n",
-    "def some_function(x, pos):\n",
-    "    return 0.0\n",
-    "\n",
-    "class NewCorrelation(pp.correlation.Correlation):\n",
+    "class NewStaticCorrelation(pp.correlation.Correlation):\n",
     "    def __init__(self, trajectory, grid):\n",
-    "        pp.correlation.Correlation.__init__(self, trajectory, grid)\n",
+    "        # The grid will be stored in self grid\n",
+    "        super().__init__(trajectory, grid)\n",
+    "        # We only need the positions\n",
     "        self.phasespace = [\"pos\"]\n",
     "\n",
     "    def _compute(self):\n",
-    "        raw = defaultdict(list)\n",
+    "        # Kernel function\n",
+    "        def my_correlation(grid, pos):\n",
+    "            return numpy.ones_like(grid)\n",
+    "\n",
+    "        # We average over all the frames here\n",
+    "        raw = []\n",
     "        for i in range(len(self._pos)):\n",
-    "            for x in self.grid: \n",
-    "                raw[x].append(some_function(x, self._pos[i]))        \n",
-    "        self.value = [numpy.mean(raw[x]) for x in raw]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daef4853",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nw = NewCorrelation(th, [0.0, 1.0])\n",
-    "nw.compute()\n",
-    "print(nw.value)"
+    "            raw.append(my_correlation(self.grid, self._pos[i]))\n",
+    "        self.value = numpy.array(raw).mean(axis=0)\n",
+    "\n",
+    "from atooms.trajectory import TrajectoryXYZ\n",
+    "th = TrajectoryXYZ(path)\n",
+    "nw = NewStaticCorrelation(th, [0.0, 1.0])\n",
+    "nw.compute()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "988d34d8",
+   "id": "c9cc45c6",
+   "metadata": {},
+   "source": [
+    "### Dynamic correlations\n",
+    "\n",
+    "To compute time-dependent correlation function, we can proceed as above,\n",
+    "looping over time origins and computing correlations between frames\n",
+    "spaced by intervals given by an input `grid`. There is a helper function\n",
+    "that deals with finding a suitable set of frames to best match an input\n",
+    "`grid` (assumed to be in real time). This deals with the general case of\n",
+    "trajectories with exponential time spacing.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9de2492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "import atooms.postprocessing as pp\n",
+    "import numpy\n",
+    "from atooms.postprocessing.helpers import setup_t_grid\n",
+    "\n",
+    "class NewDynamicCorrelation(pp.correlation.Correlation):\n",
+    "    def __init__(self, trajectory, tgrid):\n",
+    "        pp.correlation.Correlation.__init__(self, trajectory, tgrid)\n",
+    "        self.phasespace = [\"pos\"]\n",
+    "        # Here we setup a grid of frames that best match the input tgrid\n",
+    "        # See below how to use it\n",
+    "        self._discrete_tgrid = setup_t_grid(self.trajectory, tgrid)\n",
+    "\n",
+    "    def _compute(self):\n",
+    "        # Kernel function\n",
+    "        def my_correlation(grid, pos_0, pos_1):\n",
+    "            return 1.0\n",
+    "\n",
+    "        assert 0 in self.grid\n",
+    "        raw = defaultdict(list)\n",
+    "        # Here we get an offset frame and a corresponding separation t (in frame)\n",
+    "        for offset, t in self._discrete_tgrid:\n",
+    "            # We loop over compatible origin frames t_0, starting from offset,\n",
+    "            # skipping every self.skip frame\n",
+    "            for t_0 in range(offset, len(self._pos)-t, self.skip):\n",
+    "                # Compute the actual time intervale between the frames in steps\n",
+    "                dt = self.trajectory.steps[t_0 + t] - self.trajectory.steps[t_0]\n",
+    "                cf = my_correlation(self.grid, self._pos[t_0 + t], self._pos[t_0])\n",
+    "                raw[dt].append(cf)\n",
+    "\n",
+    "        # Normalization by the value at zero\n",
+    "        self.value = [numpy.mean(raw[dt]) / numpy.mean(raw[0]) for dt in raw]\n",
+    "\n",
+    "nw = NewDynamicCorrelation(th, [0.0, 1.0, 2.0])\n",
+    "nw.compute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bdc0955",
    "metadata": {},
    "source": [
     "Storing results and analysis\n",
@@ -629,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da3ced0",
+   "id": "7f211c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae3ee8b",
+   "id": "29f24d01",
    "metadata": {},
    "source": [
     "The output file path is interpolated using the variable\n",
@@ -650,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74300635",
+   "id": "36b3ce86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "357464c4",
+   "id": "38a66491",
    "metadata": {},
    "source": [
     "To change the output file pattern just modify the string. You can use\n",
@@ -675,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "296f2a5d",
+   "id": "3af9d3db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ed4f9a",
+   "id": "4b2818f9",
    "metadata": {},
    "source": [
     "If `analyze()` is called before `compute()`, the above dictionary will\n",
@@ -698,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea27a69",
+   "id": "47c5f715",
    "metadata": {},
    "outputs": [],
    "source": [
