--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -1,48 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "b826a86e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "835cfb35",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Postprocessing with atooms\n",
-    "==========================\n",
-    "\n",
-    "index\n",
-    "\n",
-    "In this tutorial, we are going to show how to perform standard analysis\n",
-    "of molecular dynamics trajectories using the `atooms` package and its\n",
-    "`postprocessing` component. You can install `postprocessing` from pypi:\n",
-    "`pip install atooms-pp`.\n",
-    "\n",
-    "Setup\n",
-    "-----\n",
-    "\n",
-    "We start with a few imports and plot customizations. We will read a\n",
-    "trajectory file in XYZ format, so we also load the `TrajectoryXYZ` class\n",
-    "from `atooms`.\n"
+    "# This allows execution from the docs/ directory\n",
+    "import sys\n",
+    "if '../' not in sys.path:\n",
+    "    sys.path.insert(0, '../')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1af38cad",
+   "id": "88d0761a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as pl\n",
-    "import atooms.postprocessing as pp\n",
-    "from atooms.trajectory import TrajectoryXYZ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b775a205",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib\n",
     "pl.rcParams.update({\n",
     "    \"font.family\": \"serif\",\n",
     "    'font.size': 11.0,\n",
@@ -61,7 +39,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db9a8ee3",
+   "id": "842890b7",
+   "metadata": {},
+   "source": [
+    "Postprocessing with atooms\n",
+    "==========================\n",
+    "\n",
+    "index\n",
+    "\n",
+    "In this tutorial, we are going to show how to perform standard analysis\n",
+    "of molecular dynamics trajectories using the `atooms` package and its\n",
+    "`postprocessing` component. You can install `postprocessing` from pypi:\n",
+    "`pip install atooms-pp`.\n",
+    "\n",
+    "Setup\n",
+    "-----\n",
+    "\n",
+    "We start with a few imports. We will read a trajectory file in XYZ\n",
+    "format, so we also load the `TrajectoryXYZ` class from `atooms`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a171df7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as pl\n",
+    "import atooms.postprocessing as pp\n",
+    "from atooms.trajectory import TrajectoryXYZ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f29b8497",
    "metadata": {},
    "source": [
     "We consider a sample trajectory, which can be downloaded from the\n",
@@ -71,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e72fe73c",
+   "id": "c16e8d6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea500b6f",
+   "id": "96a17042",
    "metadata": {},
    "source": [
     "### Handling a trajectory\n",
@@ -94,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f09261f",
+   "id": "c6689f4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6febaa2",
+   "id": "b3618aee",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -115,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9d566a6",
+   "id": "1d7b0162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88926c05",
+   "id": "1c78285d",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -133,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510d7473",
+   "id": "96a01b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f72dae",
+   "id": "ff303265",
    "metadata": {},
    "source": [
     "To clarify: a slice like `th[10: 12]` is a list of frames, not a\n",
@@ -155,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571609b2",
+   "id": "33399c36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501c5e08",
+   "id": "af889ad0",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
@@ -212,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd61bed",
+   "id": "207974ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e87323f2",
+   "id": "91d6c7b4",
    "metadata": {},
    "source": [
     "Once the calculation is performed, the radial distribution object `gr`\n",
@@ -245,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cecaf53",
+   "id": "76156d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd44e30",
+   "id": "7f74c3d8",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
@@ -270,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "019f06ba",
+   "id": "5be872a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18881dda",
+   "id": "2b277011",
    "metadata": {},
    "source": [
     "As we can see, the correlation function displays two narrow peaks around\n",
@@ -296,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75dc4d7e",
+   "id": "82f5bebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33ccd8b3",
+   "id": "3571cc25",
    "metadata": {},
    "source": [
     "Note how we modified the bin width `dr` for the $B$-$B$ correlations to\n",
@@ -319,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd24253f",
+   "id": "eb37ee83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb84113",
+   "id": "1e7aa8b1",
    "metadata": {},
    "source": [
     "We plot all correlation functions\n"
@@ -338,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09425bd",
+   "id": "f9998f61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33efb253",
+   "id": "141c2b16",
    "metadata": {},
    "source": [
     "![](gr_ab.png)\n",
@@ -364,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7ae42f6",
+   "id": "fee29abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca0b112",
+   "id": "e21ec7e6",
    "metadata": {},
    "source": [
     "![](gr_slice.png)\n",
@@ -405,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a27c16",
+   "id": "bebb7566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f103c1",
+   "id": "981badd6",
    "metadata": {},
    "source": [
     "![](msd.png)\n",
@@ -433,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ecb15f1",
+   "id": "5b6bd06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9758814f",
+   "id": "e0a0c106",
    "metadata": {},
    "source": [
     "![](msd_ab.png)\n",
@@ -470,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2bf38b2",
+   "id": "fb3d0c33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,12 +491,12 @@
     "tgrid = th.timestep * numpy.logspace(0, 5, base=10)\n",
     "isf = pp.Partial(pp.SelfIntermediateScattering, species=[\"A\"], trajectory=th,\n",
     "                 kgrid=[pi, 7.0], nk=3, dk=0.1, tgrid=tgrid)\n",
-    "isf.do()"
+    "isf.compute()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33503370",
+   "id": "24107b0b",
    "metadata": {},
    "source": [
     "Note that now `grid` is a tuple of lists: the first one is the list of\n",
@@ -497,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52874e4a",
+   "id": "056cc4ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff0df196",
+   "id": "077c49d6",
    "metadata": {},
    "source": [
     "![](isf.png)\n",
@@ -525,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206325ed",
+   "id": "99c94f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a7473e",
+   "id": "cd70dfe6",
    "metadata": {},
    "source": [
     "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
@@ -588,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0252bc",
+   "id": "cd3bb69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9cc45c6",
+   "id": "b3a5f3b2",
    "metadata": {},
    "source": [
     "### Dynamic correlations\n",
@@ -638,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9de2492",
+   "id": "29ad4786",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bdc0955",
+   "id": "3e3f5a47",
    "metadata": {},
    "source": [
     "Storing results and analysis\n",
@@ -694,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f211c67",
+   "id": "1709d975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29f24d01",
+   "id": "2622d414",
    "metadata": {},
    "source": [
     "The output file path is interpolated using the variable\n",
@@ -715,16 +727,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b3ce86",
+   "id": "638659fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print({} gives {}'.format(pp.core.pp_output_path, msd._output_file))"
+    "print('{} gives {}'.format(pp.core.pp_output_path, msd._output_file))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38a66491",
+   "id": "a3ad0bc7",
    "metadata": {},
    "source": [
     "To change the output file pattern just modify the string. You can use\n",
@@ -740,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af9d3db",
+   "id": "00cec52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b2818f9",
+   "id": "3ab0660a",
    "metadata": {},
    "source": [
     "If `analyze()` is called before `compute()`, the above dictionary will\n",
@@ -763,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47c5f715",
+   "id": "cd7ee188",
    "metadata": {},
    "outputs": [],
    "source": [
