--- a/docs/index.org
+++ b/docs/index.org
@@ -2,26 +2,18 @@
 #+author: Francesco Turci, Daniele Coslovich
 #+setupfile: org.setup
 
-* Postprocessing with atooms
-
-#+attr_rst: :directive toctree
-#+begin_quote
-    index
-#+end_quote
-
-In this tutorial, we are going to show how to perform standard analysis of molecular dynamics trajectories using the =atooms= package and its =postprocessing= component. You can install =postprocessing= from pypi: =pip install atooms-pp=. 
-
-** Setup
-
-We start with a few imports and plot customizations. We will read a trajectory file in XYZ format, so we also load the =TrajectoryXYZ= class from =atooms=.
-#+begin_src python :results none
-import matplotlib.pyplot as pl
-import atooms.postprocessing as pp
-from atooms.trajectory import TrajectoryXYZ 
+#+name: fix_path
+#+begin_src python :exports none :results output
+# This allows execution from the docs/ directory
+import sys
+if '../' not in sys.path:
+    sys.path.insert(0, '../')
 #+end_src
 
-#+begin_src python :results none :exports none
-import matplotlib
+#+results: fix_path
+
+#+begin_src python :exports none
+import matplotlib.pyplot as pl
 pl.rcParams.update({
     "font.family": "serif",
     'font.size': 11.0,
@@ -36,6 +28,26 @@ pl.rcParams.update({
     'axes.spines.top': False,
     'legend.frameon': False,
 })
+#+end_src
+
+#+results:
+
+* Postprocessing with atooms
+
+#+attr_rst: :directive toctree
+#+begin_quote
+    index
+#+end_quote
+
+In this tutorial, we are going to show how to perform standard analysis of molecular dynamics trajectories using the =atooms= package and its =postprocessing= component. You can install =postprocessing= from pypi: =pip install atooms-pp=. 
+
+** Setup
+
+We start with a few imports. We will read a trajectory file in XYZ format, so we also load the =TrajectoryXYZ= class from =atooms=.
+#+begin_src python
+import matplotlib.pyplot as pl
+import atooms.postprocessing as pp
+from atooms.trajectory import TrajectoryXYZ 
 #+end_src
 
 We consider a sample trajectory, which can be downloaded from the package repository.
@@ -137,7 +149,7 @@ Once the calculation is performed, the radial distribution object =gr= contains 
 - the =value= array contains the actual value of the computation, in this case the values of $g(r)$
 
 As you can see there is very little improvement when using the full trajectory.
-#+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr.png"
+#+begin_src python :var figname="gr.png" :results value file :prologue "import matplotlib.pyplot as plt" :epilogue "plt.savefig(f'{figname}', bbox_inches='tight'); plt.clf(); f'{figname}'"
 pl.plot(gr.grid, gr.value, label='Default')
 pl.plot(gr_all.grid, gr_all.value, label='All time origins')
 pl.xlabel("r")
@@ -149,7 +161,7 @@ pl.ylabel("g(r)")
 
 
 You can show the results right away with the =show()= method, which formats the labels automatically. The method returns a =matplotlib= axis object for further customization.
-#+begin_src python :prologue "pl.clf()"
+#+begin_src python :prologue "pl.clf()" :eval no
 gr.show()
 #+end_src
 
@@ -173,13 +185,13 @@ pprint(gr.partial)
 #+end_src
 
 #+results:
-: {('A', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7fca93e8dd60>,
-:  ('A', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7fca93e8dbe0>,
-:  ('B', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7fca93e8dc70>,
-:  ('B', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7fca93e8de80>}
+: >>> {('A', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f4cf1a53b80>,
+:  ('A', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f4cf1a53be0>,
+:  ('B', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f4cf1a53ca0>,
+:  ('B', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f4cf1a53a60>}
 
 We plot all correlation functions
-#+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr_ab.png"
+#+begin_src python :var figname="gr_ab.png" :results value file :prologue "import matplotlib.pyplot as plt" :epilogue "plt.savefig(f'{figname}', bbox_inches='tight'); plt.clf(); f'{figname}'"
 for key,g in gr.partial.items():
     pl.plot(g.grid, g.value, label=str("".join(key)))
 pl.legend()
@@ -191,7 +203,7 @@ pl.ylabel(r"$g_{\alpha\beta}(r)$")
 [[file:gr_ab.png]]
 
 Sometimes, it is useful to analyse only sections of a trajectory. To this purpose, one can slice the trajectory using =atooms= and analyse individual frames or subsets of frames. 
-#+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr_slice.png"
+#+begin_src python :var figname="gr_slice.png" :results value file :prologue "import matplotlib.pyplot as plt" :epilogue "plt.savefig(f'{figname}', bbox_inches='tight'); plt.clf(); f'{figname}'"
 from atooms import trajectory
 t =  trajectory.Sliced(th, slice(len(th)//2, len(th)))  # analyse only the 2nd half
 gr = pp.RadialDistributionFunction(t, dr=0.03)
@@ -215,7 +227,7 @@ $$ \delta r^2(t)= \langle |\mathbf{r}(t-t_0) - \mathbf{r}(t_0)|^2\rangle$$
 The average is usually performed over all the $N$ particles and over multiple time origins $t_0$.
 
 The analysis process is now familiar. First we construct the msd object and then perform the calculation with =compute()=. By default, the time grid is linear.
-#+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="msd.png"
+#+begin_src python :var figname="msd.png" :results value file :prologue "import matplotlib.pyplot as plt" :epilogue "plt.savefig(f'{figname}', bbox_inches='tight'); plt.clf(); f'{figname}'"
 msd = pp.MeanSquareDisplacement(th)
 msd.compute()
 pl.plot(msd.grid, msd.value, '-o')
@@ -227,7 +239,7 @@ pl.ylabel("MSD(t)");
 [[file:msd.png]]
 
 Again, we can compute partial mean square displacements using the =Partial= class. This time we use an expoentially spaced time grid. We can clearly distinguish the short time balistic regime from the diffusion one at long times. The intermediate inflection is a signal of incipient glassy dynamics.
-#+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="msd_ab.png"
+#+begin_src python :var figname="msd_ab.png" :results value file :prologue "import matplotlib.pyplot as plt" :epilogue "plt.savefig(f'{figname}', bbox_inches='tight'); plt.clf(); f'{figname}'"
 import numpy
 tgrid = th.timestep * numpy.logspace(0, 5, base=10)
 msds = pp.Partial(pp.MeanSquareDisplacement, species=['A','B'], trajectory=th, tgrid=tgrid)
@@ -251,7 +263,7 @@ import numpy
 tgrid = th.timestep * numpy.logspace(0, 5, base=10)
 isf = pp.Partial(pp.SelfIntermediateScattering, species=["A"], trajectory=th,
                  kgrid=[pi, 7.0], nk=3, dk=0.1, tgrid=tgrid)
-isf.do()
+isf.compute()
 #+end_src
 
 #+results:
@@ -262,7 +274,7 @@ Note that now =grid= is a tuple of lists: the first one is the list of all the $
 #+end_quote
 
 The ISF decays to zero at long times, as it should in an ergodic liquid.
-#+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="isf.png"
+#+begin_src python :var figname="isf.png" :results value file :prologue "import matplotlib.pyplot as plt" :epilogue "plt.savefig(f'{figname}', bbox_inches='tight'); plt.clf(); f'{figname}'"
 isf_A = isf.partial['A']
 pl.semilogx(isf_A.grid[1], isf_A.value[0], '-o', label=f'k={isf_A.grid[0][0]:.2f}') 
 pl.semilogx(isf_A.grid[1], isf_A.value[1], '-o', label=f'k={isf_A.grid[0][1]:.2f}') 
@@ -273,6 +285,7 @@ pl.ylabel('ISF')
 
 #+results:
 [[file:isf.png]]
+
 
 *** More correlation functions
 Here is the full list of correlation functions currently available in =postprocessing=, along with the corresponding classes:
@@ -348,6 +361,8 @@ nw = NewStaticCorrelation(th, [0.0, 1.0])
 nw.compute()
 #+end_src
 
+#+results:
+
 *** Dynamic correlations
 
 To compute time-dependent correlation function, we can proceed as above, looping over time origins and computing correlations between frames spaced by intervals given by an input =grid=. There is a helper function that deals with finding a suitable set of frames to best match an input =grid= (assumed to be in real time). This deals with the general case of trajectories with exponential time spacing.
@@ -389,6 +404,8 @@ nw = NewDynamicCorrelation(th, [0.0, 1.0, 2.0])
 nw.compute()
 #+end_src
 
+#+results:
+
 ** Storing results and analysis
 
 The correlation functions can be written to files, using the =write()= method. 
@@ -398,13 +415,15 @@ msd.compute()
 msd.write()
 #+end_src
 
+#+results:
+
 The output file path is interpolated using the variable =core.pp_output_path=
 #+begin_src python
-print({} gives {}'.format(pp.core.pp_output_path, msd._output_file))
+print('{} gives {}'.format(pp.core.pp_output_path, msd._output_file))
 #+end_src
 
 #+results:
-: {trajectory.filename}.pp.{symbol}.{tag} leads to /tmp/kalj-small.xyz.pp.msd
+: {trajectory.filename}.pp.{symbol}.{tag} gives /tmp/kalj.xyz.pp.msd
 
 To change the output file pattern just modify the string. You can use any =Correlation= attribute enclosed in brackets to parameterize the output.
 
@@ -417,13 +436,13 @@ pprint(msd.analysis)
 #+end_src
 
 #+results:
-: {'diffusion coefficient D': 0.004481283121206189,
-:  'diffusive time tau_D': 30.841529039944426}
+: {'diffusion coefficient D': 0.012115095529748822,
+:  'diffusive time tau_D': 14.341564407459972}
 
 If =analyze()= is called before =compute()=, the above dictionary will be written in the output file as well.
 
 Finally, you can perform all the steps above (=compute=, =analyze=, =write=) in one sweep like this
-#+begin_src python
+#+begin_src python :eval no
 msd.do()
 #+end_src
 
